--- a/machshop/backend/.env
+++ b/machshop/backend/.env
@@ -2,8 +2,7 @@ JWT_SECRET = "greatstack"
 ADMIN_EMAIL = "steroidsego@gmail.com"
 ADMIN_PASSWORD = "steroids0922"
 
-MONGODB_URI= "mongodb+srv://nandiagrotechofficial:7n8P3ZM0O4sI0mCC@cluster0.1d8qewd.mongodb.net/myShopDB?retryWrites=true&w=majority&appName=Cluster0"
-
+MONGODB_URI="mongodb+srv://tech345:frbdhsjkf745757jj@cluster0.vlhwji9.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 
 CLOUDINARY_API_KEY = "149188261457112"
 CLOUDINARY_SECRET_KEY = "LFItbfdA4FSDpspsrV5ctCru56U"
